# Guide

./: .replit  Dockerfile.render  MARKETING_SITE_INTEGRATION.md  admin_interface.py  app.py  app_mvp.py  australian_curriculum_v9.txt  auth.py  cross_curriculum_priorities_v9.txt  data_export.py  database.py  email_service.py  general_capabilities_v9.txt  guide_learning_design_protocol.txt  init_db.py  interfaces.py  montessori_national_curriculum.txt  montessori_own_handbook.txt  notes  package-lock.json  package.json  proxy_server.js  pyproject.toml  rag_system.py  rate_limiter.py  render.yaml  render_start.sh  replit.md  replit_auth.py  requirements-render.txt  scheduled_cleanup.py  start_all.sh  stripe_client.py  stripe_webhook.py  test_rag_integration.py  test_streamlit.py  the_absorbent_mind_montessori.txt  the_montessori_method.txt  users.json  utils.py
.streamlit/: config.toml
adaptive/: adaptiveCore.js  adaptivePromptManager.js  analyticsRoute.js  feedbackSystem.js  package-lock.json  package.json  pgKvStore.js  semanticLogger.js  server.js  subjectCalibrator.js  trendingKeywords.js
api/: db.py  deps.py  main.py
assets/: README.md
attached_assets/: Pasted--Database-All-Databases-Refresh-Databases-Development-D_1765857001175.txt  Pasted--GRACE-PERIOD-AUTO-SWITCH-import-express-from-express-import-bodyParser-from-body--1760260073323_1760260073323.txt  Pasted--Guide-UI-UX-Changes-Reference-Color-Palette-Purpose-Co_1768887711301.txt  Pasted--Privacy-Policy-Last-Updated-October-2025-1-Introduction-Welcome-to-Guide-Yo-1762576706643_1762576706643.txt  (+81 more)
(+54 files in other folders)
