[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "docx>=0.2.4",
    "extra-streamlit-components>=0.1.81",
    "fastapi>=0.135.3",
    "numpy>=2.3.2",
    "openai>=1.100.2",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
    "stripe>=14.0.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.44.0",
]
